animals-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: birds
  template:
    metadata:
      labels:
        app: birds
    spec:
      containers:
        - name: birds
          image: hashicorp/http-echo
          args:
            - "-text=Birds Page"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: birds-service
spec:
  selector:
    app: birds
  ports:
    - port: 80
      targetPort: 5678

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cats

  template:
    metadata:
      labels:
        app: cats

    spec:
      containers:
        - name: cats-container
          image: hashicorp/http-echo

          args:
            - "-text=Cats App"

          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: cats-service

spec:
  selector:
    app: cats

  ports:
    - port: 80
      targetPort: 5678

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogs-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: dogs

  template:
    metadata:
      labels:
        app: dogs

    spec:
      containers:
        - name: dogs-container
          image: hashicorp/http-echo

          args:
            - "-text=Dogs App"

          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: dogs-service

spec:
  selector:
    app: dogs

  ports:
    - port: 80
      targetPort: 5678

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animals-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: animals.local

      http:
        paths:
          - path: /cats
            pathType: Prefix
            backend:
              service:
                name: cats-service
                port:
                  number: 80

          - path: /birds
            pathType: Prefix
            backend:
              service:
                name: birds-service
                port:
                  number: 80

          - path: /dogs
            pathType: Prefix
            backend:
              service:
                name: dogs-service
                port:
                  number: 80
